# offline_listens

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
offline_listens/: __main__.py  listens.py  parse.py
