[project]
name = "offline_listens"
version = "0.1.0"
description = "an offline listening history"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["music"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "autotui",
  "click>=8.0",
  "logzero",
  "pyfzf-iter",
  "pyyaml",
  "simplejson",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
offline_listens = "offline_listens.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/offline_listens"

[project.optional-dependencies]
testing = ["flake8", "mypy", "types-simplejson"]

[tool.mypy]
pretty = "True"
show_error_context = "True"
show_error_codes = "True"
check_untyped_defs = "True"
namespace_packages = "True"
disallow_any_generics = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.setuptools.packages.find]
include = ["offline_listens"]
exclude = []
